--- a/doc/context/scripts/mkiv/luatools.man
+++ b/doc/context/scripts/mkiv/luatools.man
@@ -1,14 +1,69 @@
-.TH "" "1" "01-01-2015" "version " ""
+.TH "luatools" "1" "01-01-2015" "version 1.35" "ConTeXt TDS Management Tool (aka luatools)"
 .SH NAME
-.B 
+.B luatools
 .SH SYNOPSIS
-.B  [
+.B luatools [
 .I OPTIONS ...
 .B ] [
 .I FILENAMES
 .B ]
 .SH DESCRIPTION
-.B 
+.B ConTeXt TDS Management Tool (aka luatools)
+.SH OPTIONS
+.TP
+.B --generate
+generate file database
+.TP
+.B --variables
+show configuration variables
+.TP
+.B --configurations
+show configuration order
+.TP
+.B --expand-braces
+expand complex variable
+.TP
+.B --expand-path
+expand variable (resolve paths)
+.TP
+.B --expand-var
+expand variable (resolve references)
+.TP
+.B --show-path
+show path expansion of ...
+.TP
+.B --var-value
+report value of variable
+.TP
+.B --find-file
+report file location
+.TP
+.B --find-path
+report path of file
+.TP
+.B --make
+[or --ini] make luatex format
+.TP
+.B --run
+[or --fmt] run luatex format
+.TP
+.B --compile
+assemble and compile lua inifile
+.TP
+.B --verbose
+give a bit more info
+.TP
+.B --all
+show all found files
+.TP
+.B --format=str
+filter cf format specification (default 'tex', use 'any' for any match)
+.TP
+.B --pattern=str
+filter variables
+.TP
+.B --trackers=list
+enable given trackers
 .SH AUTHOR
 More information about ConTeXt and the tools that come with it can be found at:
 
