--- a/doc/context/sources/general/manuals/luatex/luatex-libraries.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-libraries.tex
@@ -3177,9 +3177,10 @@ ones. The syntax of the string is explained in~\in {section}
 lang.clear_hyphenation(<language> l)
 \stopfunctioncall
 
-Clears the exception dictionary for this language.
+Clears the exception dictionary (string) for this language.
 
 \startfunctioncall
+<string> n = lang.clean(<language> l, <string> o)
 <string> n = lang.clean(<string> o)
 \stopfunctioncall
 
@@ -3248,6 +3249,13 @@ Hyphenation works only on \quote {characters}, a special subtype of all the glyp
 nodes with the node subtype having the value \type {1}. Glyph modes with
 different subtypes are not processed. See \in {section~} [charsandglyphs] for
 more details.
+
+The following two commands can be used to set or query hj codes:
+
+\startfunctioncall
+lang.sethjcode(<language> l, <number> char, <number> usedchar)
+<number> usedchar = lang.gethjcode(<language> l, <number> char)
+\stopfunctioncall
 
 \section{The \type {lua} library}
 
@@ -4812,6 +4820,8 @@ The current list is:
 \NC luatex_version     \NC the luatex version number \NC \NR
 \NC luatex_revision    \NC the luatex revision string \NC \NR
 \NC ini_version        \NC \type {true} if this is an \INITEX\ run \NC \NR
+\NC shell_escape       \NC \type {0} means disabled, \type {1} is restricted and
+                           \type {2} means anything is permitted \NC \NR
 \stoptabulate
 
 The error and warning messages can be wiped with the \type {resetmessages}
