--- a/doc/context/sources/general/manuals/luatex/luatex-modifications.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-modifications.tex
@@ -541,8 +541,10 @@ The configuration related registers have become:
 \edef\pdfimagehicolor             {\pdfvariable imagehicolor}
 \edef\pdfimageaddfilename         {\pdfvariable imageaddfilename}
 \edef\pdfpkresolution             {\pdfvariable pkresolution}
+\edef\pdfpkfixeddpi               {\pdfvariable pkfixeddpi}
 \edef\pdfinclusioncopyfonts       {\pdfvariable inclusioncopyfonts}
 \edef\pdfinclusionerrorlevel      {\pdfvariable inclusionerrorlevel}
+\edef\pdfignoreunknownimages      {\pdfvariable ignoreunknownimages}
 \edef\pdfgentounicode             {\pdfvariable gentounicode}
 \edef\pdfpagebox                  {\pdfvariable pagebox}
 \edef\pdfminorversion             {\pdfvariable minorversion}
@@ -553,7 +555,7 @@ The configuration related registers have become:
 \edef\pdflinkmargin               {\pdfvariable linkmargin}
 \edef\pdfdestmargin               {\pdfvariable destmargin}
 \edef\pdfthreadmargin             {\pdfvariable threadmargin}
-\edef\pdfformmargin               {\pdfvariable formmargin}
+\edef\pdfxformmargin              {\pdfvariable xformmargin}
 
 \edef\pdfpagesattr                {\pdfvariable pagesattr}
 \edef\pdfpageattr                 {\pdfvariable pageattr}
@@ -595,8 +597,10 @@ the defaults; these are:
 \pdfimagehicolor          1
 \pdfimageaddfilename      1
 \pdfpkresolution         72
+\pdfpkfixeddpi            0
 \pdfinclusioncopyfonts    0
 \pdfinclusionerrorlevel   0
+\pdfignoreunknownimages   0
 \pdfgentounicode          0
 \pdfpagebox               0
 \pdfminorversion          4
