--- a/tex/context/base/mkiv/context-todo.tex
+++ b/tex/context/base/mkiv/context-todo.tex
@@ -15,6 +15,9 @@
     \startitem
         optimize some callback resolution (more direct)
     \stopitem
+    \startitem
+        add \type {--output-filename} for \PDF\ filename
+    \stopitem
 \stopitemize
 
 \subsubject{\CONTEXT}
